--- a/quizWeb/src/app/modules/auth/signup/signup.component.html
+++ b/quizWeb/src/app/modules/auth/signup/signup.component.html
@@ -1,1 +1,33 @@
-<p>signup works!</p>
+<div class="bg" style="background-color: #F8F8F8;">
+    <div class="parent">
+        <div class="child">
+            <div nz-row class="imgDiv">
+                <h1 style="margin-left: 80px">Sign up</h1>
+            </div>
+
+            <form nz-form [formGroup]="validateForm" (ngSubmit)="submitForm()">
+                <nz-form-item>
+                    <nz-form-control nzHasFeedback nzErrorTip="The input is not valid Email!">
+                        <input nz-input placeholder="Email" formControlName="email"/>
+                    </nz-form-control>
+                </nz-form-item>
+
+                <nz-form-item>
+                    <nz-form-control nzHasFeedback nzErrorTip="The input is not valid Password!">
+                        <input nz-input placeholder="Password" type="password" formControlName="password"/>
+                    </nz-form-control>
+                </nz-form-item>
+
+                <nz-form-item>
+                    <nz-form-control nzHasFeedback nzErrorTip="The input is not valid Name!">
+                        <input nz-input placeholder="Name" formControlName="name"/>
+                    </nz-form-control>
+                </nz-form-item>
+
+                <button nz-button class="login-form-button login-form-margin" [nzType]="'primary'">Register</button>
+                Or <a routerLink="/login"> Login now! </a>
+
+            </form>
+        </div>
+    </div>
+</div>
