--- a/quizWeb/src/app/modules/auth/login/login.component.html
+++ b/quizWeb/src/app/modules/auth/login/login.component.html
@@ -5,7 +5,7 @@
                 <h1 style="margin-left: 100px">Login</h1>
             </div>
 
-            <form nz-form [formGroup]="validateForm" class="login-form">
+            <form nz-form [formGroup]="validateForm" class="login-form" (ngSubmit)="submitForm()">
                 <nz-form-item>
                     <nz-form-control nzErrorTip="Please input your Email!">
                         <input type="text" nz-input placeholder="Email" formControlName="email"/>
