Creating the add question in test in quizWeb app

--- a/quizWeb/src/app/modules/admin/components/create-test/create-test.component.html
+++ b/quizWeb/src/app/modules/admin/components/create-test/create-test.component.html
@@ -25,7 +25,7 @@
                 </nz-form-item>
 
                 <div style="padding-bottom: 30px;">
-                    <button nz-button class="login-form-button login-form-margin" [nzType]="'primary'">Submit</button>
+                    <button nz-button class="login-form-button login-form-margin" [nzType]="'primary'" [disabled]="testForm.invalid">Submit</button>
                 </div>
             </form>
         </div>
