--- a/quizWeb/src/app/modules/admin/components/view-test-results/view-test-results.component.html
+++ b/quizWeb/src/app/modules/admin/components/view-test-results/view-test-results.component.html
@@ -12,7 +12,7 @@
         <tbody>
             <tr *ngFor="let data of basicTable.data">
                 <td>{{data.testName}}</td>
-                <td>{{data.userName}}</td>
+                <td>{{data.username}}</td>
                 <td>{{data.totalQuestions}}</td>
             <td>{{data.correctAnswers}}</td>
             <td>{{data.percentage | number:'1.2-2'}}</td>
