Fix some simple problems, add transactions and fix chart

--- a/quizWeb/src/app/modules/user/components/test-results-chart/test-results-chart.component.html
+++ b/quizWeb/src/app/modules/user/components/test-results-chart/test-results-chart.component.html
@@ -2,8 +2,8 @@
   <h2>{{ testName }}</h2>
   <canvas id="resultsChart" ></canvas>
   <div style="margin-top: 20px;">
-    <p>Правильных ответов: {{ correctAnswers }} ({{ correctPercentage | number:'1.2-2' }}%)</p>
-    <p>Неправильных ответов: {{ incorrectAnswers }} ({{ incorrectPercentage | number:'1.2-2' }}%)</p>
+    <p>Correct answers: {{ correctAnswers }} ({{ correctPercentage | number:'1.2-2' }}%)</p>
+    <p>Incorrect answers: {{ incorrectAnswers }} ({{ incorrectPercentage | number:'1.2-2' }}%)</p>
   </div>
-  <button nz-button nzType="primary" (click)="next()">Далее</button>
+  <button nz-button nzType="primary" (click)="next()">Next</button>
 </div>
